--- a/Portfolio/framework/test.html
+++ b/Portfolio/framework/test.html
@@ -1,39 +1,36 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html>
-
 <head>
-  <meta charset="utf-8">
-  <title>Framework Test Page</title>
-  <link rel="stylesheet" href="css/main.css">
-
+	<meta charset="utf-8">
+	<title>Framework Test page</title>
+	<link rel="stylesheet" href="css/main.css">
 </head>
-
 <body>
 
-	<h1>Framework Test Page </h1>
-  <div class="grid">
-    <div class="row">
-      <div class="col-2">2 Columns</div>
-      <div class="col-10">10 Columns</div>
-    </div>
-	
-    <div class="row">
-      <div class="col-3">3 Columns</div>
-      <div class="col-9">9 Columns</div>
-    </div>
-	
-    <div class="row">
-      <div class="col-4">4 Columns</div>
-      <div class="col-4">4 Columns</div>
-      <div class="col-4">4 Columns</div>
-    </div>
-	
-    <div class="row">
-      <div class="col-3">3 Columns</div>
-      <div class="col-6">6 Columns</div>
-      <div class="col-3">3 Columns</div>
-    </div>
-  </div>
-</body>
+	<div class="grid">
 
+		<div class="row">
+			<div class="col-2">2 Columns</div>
+			<div class="col-10 end">10 Columns</div>
+		</div>
+
+		<div class="row">
+			<div class="col-3">3 Columns</div>
+			<div class="col-9 end">9 Columns</div>
+		</div>
+
+		<div class="row">
+			<div class="col-4">4 Columns</div>
+			<div class="col-4">4 Columns</div>
+			<div class="col-4 end">4 Columns</div>
+		</div>
+
+		<div class="row">
+			<div class="col-3">3 Columns</div>
+			<div class="col-6">6 Columns</div>
+			<div class="col-3 end">3 Columns</div>
+		</div>
+	</div>
+</body>
 </html>
